[package]
name = "l_0_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
axum-macros = "0.4.1"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
bb8-redis = "0.16.0"
chrono = { version = "0.4.9", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
postgres-types = { version = "0.2.7", features = ["derive", "with-chrono-0_4"] }
redis-macros = "0.4.0"
serde = { version = "1.0.209", features = ["derive"] }
serde-email = { version = "3.0.1", features = ["serde"] }
serde_json = "1.0.127"
serde_repr = "0.1.19"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-macros = "2.4.0"
tokio-postgres = "0.7.11"
tower = { version = "0.5.1", features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.redis]
version = "0.26"
features = ["tokio-comp", "connection-manager", "json"]
